--- a/Woopons/CustomCells/FavoriteTableCell.xib
+++ b/Woopons/CustomCells/FavoriteTableCell.xib
@@ -156,12 +156,12 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Ab-MW-P8I">
-                                <rect key="frame" x="396" y="109" width="115" height="35"/>
+                                <rect key="frame" x="377" y="109" width="134" height="35"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                 <color key="tintColor" name="primaryRed"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Get coupon now">
+                                <state key="normal" title="Activate WOO-PON">
                                     <color key="titleColor" name="primaryRed"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
