--- a/Woopons/CustomCells/RecentlyAddedTableCell.xib
+++ b/Woopons/CustomCells/RecentlyAddedTableCell.xib
@@ -10,6 +10,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Poppins-Medium.ttf">
+            <string>Poppins-Medium</string>
+        </array>
         <array key="Poppins-Regular.ttf">
             <string>Poppins-Regular</string>
         </array>
@@ -144,14 +147,38 @@
                                     <constraint firstAttribute="width" constant="30" id="aGi-ve-8Rd"/>
                                 </constraints>
                             </imageView>
+                            <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Kq-Rk-cMc">
+                                <rect key="frame" x="10" y="157" width="32" height="32"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AK" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="yly-YZ-gO2">
+                                        <rect key="frame" x="8" y="6" width="16" height="20"/>
+                                        <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="12"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="primaryRed"/>
+                                <constraints>
+                                    <constraint firstItem="yly-YZ-gO2" firstAttribute="centerX" secondItem="9Kq-Rk-cMc" secondAttribute="centerX" id="TV3-oi-p8E"/>
+                                    <constraint firstItem="yly-YZ-gO2" firstAttribute="centerY" secondItem="9Kq-Rk-cMc" secondAttribute="centerY" id="bsw-Fq-3Gq"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="jzK-N1-fdh" secondAttribute="trailing" constant="10" id="0Jg-hx-ujY"/>
+                            <constraint firstItem="9Kq-Rk-cMc" firstAttribute="trailing" secondItem="sdf-ma-umb" secondAttribute="trailing" id="10d-ze-UTL"/>
                             <constraint firstItem="sfR-pv-GRh" firstAttribute="top" secondItem="aoB-0n-ALH" secondAttribute="top" constant="10" id="1Sf-xY-pag"/>
                             <constraint firstItem="Xq6-iz-TOh" firstAttribute="leading" secondItem="cvw-qG-vDC" secondAttribute="trailing" id="AXC-sE-zeq"/>
                             <constraint firstItem="cvw-qG-vDC" firstAttribute="top" secondItem="aoB-0n-ALH" secondAttribute="top" constant="10" id="Csm-ol-dBF"/>
                             <constraint firstItem="Xq6-iz-TOh" firstAttribute="top" secondItem="aoB-0n-ALH" secondAttribute="top" constant="10" id="EV4-fz-wIa"/>
+                            <constraint firstItem="9Kq-Rk-cMc" firstAttribute="top" secondItem="sdf-ma-umb" secondAttribute="top" id="Efv-md-bVw"/>
+                            <constraint firstItem="9Kq-Rk-cMc" firstAttribute="bottom" secondItem="sdf-ma-umb" secondAttribute="bottom" id="Giv-5q-w1C"/>
                             <constraint firstItem="sdf-ma-umb" firstAttribute="leading" secondItem="aoB-0n-ALH" secondAttribute="leading" constant="10" id="LVQ-A7-FYu"/>
                             <constraint firstItem="sdf-ma-umb" firstAttribute="top" secondItem="sfR-pv-GRh" secondAttribute="bottom" constant="15" id="M7D-UZ-b3j"/>
                             <constraint firstItem="cvw-qG-vDC" firstAttribute="leading" secondItem="sfR-pv-GRh" secondAttribute="trailing" id="Puz-kd-XE7"/>
@@ -161,6 +188,7 @@
                             <constraint firstItem="cvw-qG-vDC" firstAttribute="centerY" secondItem="sfR-pv-GRh" secondAttribute="centerY" id="Xus-y7-2Iu"/>
                             <constraint firstAttribute="bottom" secondItem="jzK-N1-fdh" secondAttribute="bottom" constant="10" id="YIi-Uc-0aU"/>
                             <constraint firstItem="sfR-pv-GRh" firstAttribute="leading" secondItem="aoB-0n-ALH" secondAttribute="leading" constant="10" id="YxI-bB-hQF"/>
+                            <constraint firstItem="9Kq-Rk-cMc" firstAttribute="leading" secondItem="sdf-ma-umb" secondAttribute="leading" id="ZNo-Xo-Tw9"/>
                             <constraint firstAttribute="bottom" secondItem="sdf-ma-umb" secondAttribute="bottom" constant="10" id="tPn-7l-cAj"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
@@ -193,8 +221,10 @@
             <connections>
                 <outlet property="categoryLabel" destination="ccc-hC-xFB" id="oU3-kW-prf"/>
                 <outlet property="detailButton" destination="Fws-KW-9IY" id="Uen-51-hoX"/>
+                <outlet property="imageNameLbl" destination="yly-YZ-gO2" id="96R-xF-waD"/>
                 <outlet property="imgView" destination="sdf-ma-umb" id="wQn-lg-9c9"/>
                 <outlet property="nameLabel" destination="fK0-wc-6kf" id="52t-FA-WDR"/>
+                <outlet property="nameView" destination="9Kq-Rk-cMc" id="cFR-OQ-0y6"/>
                 <outlet property="redView" destination="sfR-pv-GRh" id="paE-ei-xvG"/>
                 <outlet property="typeLabel" destination="Fbb-LF-KgS" id="yKi-Fv-pQG"/>
                 <outlet property="yellowView" destination="Xq6-iz-TOh" id="4Qn-ci-gku"/>
